# taiga-cfd-analytics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
taiga_cfd/: __init__.py  cfd_visualizer.py  cli.py  taiga_cfd_generator.py
